# cue_enhancer

./: .dockerignore  .gitignore  CHANGELOG-2026-03-02.md  CHANGELOG-2026-03-03.md  CLAUDE.md  Dockerfile  README.md  bench_optimized.py  cue-enhancer-design.md  docker-compose.yml  pyproject.toml  run_live_test.py  test_agent_live.py  test_benchmark_mini.py  test_complex_tasks.py  test_memory_verify.py  test_minimal.py
.github/workflows/: ci.yml
cue/: __init__.py  agent.py  cli.py  config.py  types.py
cue/advanced/: __init__.py  omniparser.py
cue/benchmark/: __init__.py  __main__.py  ablation.py  analysis.py  checkers.py  cli.py  env_extractor.py  metrics.py  runner.py  task_loader.py
cue/efficiency/: __init__.py  context.py  enhancer.py  latency.py  step_optimizer.py
cue/execution/: __init__.py  coordinator.py  drag.py  enhancer.py  fallback.py  timing.py  validator.py
cue/grounding/: __init__.py  enhancer.py  merger.py  structural.py  textual.py  visual.py
cue/knowledge/: calculator.yaml  chrome.yaml  edge.yaml  excel.yaml  file_explorer.yaml  firefox.yaml  gedit.yaml  gimp.yaml  gnome_terminal.yaml  libreoffice_calc.yaml  libreoffice_impress.yaml  libreoffice_writer.yaml  nautilus.yaml  notepad.yaml  outlook.yaml  paint.yaml  powerpoint.yaml  slack.yaml  (+6 more)
docker/: entrypoint.sh
scripts/: setup_benchmark_env.sh
tests/: test_agent.py  test_benchmark.py  test_config.py  test_efficiency.py  test_execution.py  test_grounding.py  test_memory.py  test_phase4.py  test_planning.py  test_platform.py  test_safety_v2.py  test_types.py  test_verification_ext.py
(+26 files in other folders)
